signature PADES test d'intégration passant
