# src/main/java/fr/asipsante/api/sign/ws/util/ESignatureType.java
@@ -1,0 +1,5 @@
+package fr.asipsante.api.sign.ws.util;
+
+public enum ESignatureType {
+	XMLDSIG, XADES, PADES;
+}
